@startuml

title __EDITPOST's Class Diagram__\n

  namespace com.architectica.socialcomponents {
    namespace main.post {
      namespace editPost {
        class com.architectica.socialcomponents.main.post.editPost.EditPostActivity {
            {static} + EDIT_POST_REQUEST : int
            {static} + POST_EXTRA_KEY : String
            {static} - TAG : String
            + createPresenter()
            + onCreateOptionsMenu()
            + onOptionsItemSelected()
            + openMainActivity()
            # onCreate()
            # onStart()
            # onStop()
            - fillUIFields()
            - loadPostDetailsImage()
        }
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.post {
      namespace editPost {
        class com.architectica.socialcomponents.main.post.editPost.EditPostPresenter {
            + addCheckIsPostChangedListener()
            + closeListeners()
            + setPost()
            # getSaveFailMessage()
            # isImageRequired()
            # savePost()
            ~ EditPostPresenter()
            - updatePostIfChanged()
        }
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.post {
      namespace editPost {
        interface com.architectica.socialcomponents.main.post.editPost.EditPostView {
            {abstract} + openMainActivity()
        }
      }
    }
  }
  

  com.architectica.socialcomponents.main.post.editPost.EditPostActivity .up.|> com.architectica.socialcomponents.main.post.editPost.EditPostView
  com.architectica.socialcomponents.main.post.editPost.EditPostActivity -up-|> com.architectica.socialcomponents.main.post.BaseCreatePostActivity
  com.architectica.socialcomponents.main.post.editPost.EditPostPresenter -up-|> com.architectica.socialcomponents.main.post.BaseCreatePostPresenter
  com.architectica.socialcomponents.main.post.editPost.EditPostPresenter o-- com.architectica.socialcomponents.model.Post : post


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
